--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <title>CorpSquad Consultancy Dashboard</title>
+  <link href="./style.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
