--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>CorpSquad Consultancy Dashboard</title>
-  <link href="./style.css" rel="stylesheet" />
+  <link href="/style.css" rel="stylesheet" />
 </head>
 
 <body>
